# CPAQ

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  cpaq-test.c  cpaq-test.pc.in  cpaq.c  cpaq.h  cpaq_test_config  libcpaq.c  libcpaq.pc.in  libcpaq_config
