AM_CPPFLAGS = -D__STDC_INT64__

lib_LTLIBRARIES =
bin_PROGRAMS    =

lib_LTLIBRARIES += libcpaq.la
include_HEADERS = cpaq.h
libcpaq_la_CPPFLAGS = $(GLITTER_CFLAGS) $(MMALLOC_CFLAGS) $(PARRAY_CFLAGS)
libcpaq_la_LIBADD   = $(GLITTER_LIBS)   $(MMALLOC_LIBS)   $(PARRAY_LIBS)

bin_PROGRAMS += cpaq-test
cpaq_test_CPPFLAGS =        $(GLITTER_CFLAGS) $(MMALLOC_CFLAGS) $(PARRAY_CFLAGS) $(SIMON_CFLAGS)
cpaq_test_LDADD    = -lcpaq $(GLITTER_LIBS)   $(MMALLOC_LIBS)   $(PARRAY_LIBS)   $(SIMON_LIBS)  
EXTRA_cpaq_test_DEPENDENCIES = libcpaq.la

